Fixed input error message and button margins and paddings on mobile.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap");
 @import "./_library.scss";
 
 * {
@@ -13,15 +13,15 @@
   display: flex;
   width: 1440px;
   background: var(--linear-grad1);
-  @include respond-to('xl') {
+  @include respond-to("xl") {
     width: auto;
   }
-  @include respond-to('medium') {
+  @include respond-to("medium") {
     flex-direction: column;
     align-items: center;
     height: 100vh;
   }
-  @include respond-to('mobile') {
+  @include respond-to("mobile") {
     width: 100%;
     height: 850px;
     // border: 1px solid blue;
@@ -35,19 +35,19 @@
   width: 60%;
   padding: 5% 15% 10% 15%;
   background: url("../images/bg-pattern-desktop.svg");
-  @include respond-to('medium') {
+  @include respond-to("medium") {
     padding: 10%;
     padding-top: 100px;
     width: 100%;
     height: 100vh;
   }
-  @include respond-to('mobile') {
+  @include respond-to("mobile") {
     background: none;
     padding: 0;
   }
 }
 
-.logo { 
+.logo {
   padding: 2rem 0 2rem 2rem;
   img {
     width: 100px;
@@ -56,19 +56,19 @@
 
 .landing-picture {
   img {
-  max-height: 100vh;
+    max-height: 100vh;
   }
 }
 
 .landing-picture__desktop {
-  @include respond-to('medium') {
+  @include respond-to("medium") {
     display: none;
   }
 }
 
 .landing-picture__mobile {
   display: none;
-  @include respond-to('mobile') {
+  @include respond-to("mobile") {
     display: block;
     width: 100%;
   }
@@ -76,7 +76,7 @@
 
 .description {
   height: auto;
-  @include respond-to('mobile') {
+  @include respond-to("mobile") {
     padding: 0 2rem 0 2rem;
     text-align: center;
   }
@@ -96,7 +96,7 @@
   &:nth-child(3) {
     margin-top: 10px;
   }
-  @include respond-to('mobile') {
+  @include respond-to("mobile") {
     font-size: 2.4rem;
     letter-spacing: 0.5rem;
     text-align: center;
@@ -113,7 +113,7 @@
   line-height: 2rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
-  @include respond-to('mobile') {
+  @include respond-to("mobile") {
     font-size: 0.8rem;
     line-height: 1.6rem;
   }
@@ -134,6 +134,10 @@
   outline: none;
   &::placeholder {
     color: var(--input);
+  }
+  @include respond-to("mobile") {
+    font-size: 0.8rem;
+    height: 3rem;
   }
 }
 
@@ -162,7 +166,7 @@
   transition: box-shadow background-image 0.5s ease-in-out;
   &:after {
     position: absolute;
-    content: '';
+    content: "";
     top: 0;
     left: 0;
     height: 3.5rem;
@@ -173,16 +177,27 @@
     transition: opacity 0.5s ease-in-out;
     z-index: 2;
     opacity: 0;
+    @include respond-to("mobile") {
+      top: -0.1rem;
+      font-size: 0.5rem;
+      width: 4.5rem;
+      height: 3.1rem;
+    }
   }
   &:hover:after {
     opacity: 1;
-    box-shadow: 0px 16px 32px -8px rgba(0,0,0,0.25);
+    box-shadow: 0px 16px 32px -8px rgba(0, 0, 0, 0.25);
     transition: box-shadow opacity 0.5s ease-in-out;
   }
   span {
     font-size: 2rem;
     position: relative;
     z-index: 3;
+  }
+  @include respond-to("mobile") {
+    font-size: 0.5rem;
+    width: 4.5rem;
+    height: 3rem;
   }
 }
 
@@ -199,23 +214,28 @@
   right: 27.5%;
   top: 20%;
   animation: jello-vertical 0.5s both;
+  @include respond-to("mobile") {
+    top: 15%;
+  }
 }
 
 .description__error-message {
   opacity: 0;
   font-size: 0.75rem;
-  margin-left: 2rem; 
+  margin-left: 2rem;
   margin-top: 0.5rem;
 }
 
 .description__error-message--active {
   font-size: 0.75rem;
   color: red;
-  margin-left: 2rem; 
+  margin-left: 2rem;
   margin-top: 0.5rem;
-  animation: opacity 0.5s both;
+  animation: opacity 0.25s both;
   animation-delay: 0.5s;
-
+  @include respond-to("mobile") {
+    text-align: left;
+  }
 }
 
 @keyframes opacity {
@@ -226,7 +246,7 @@
     opacity: 0.25;
   }
   50% {
-    opacity: 0.50;
+    opacity: 0.5;
   }
   75% {
     opacity: 0.75;
@@ -239,60 +259,60 @@
 @-webkit-keyframes jello-vertical {
   0% {
     -webkit-transform: scale3d(1, 1, 1);
-            transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
   }
   30% {
     -webkit-transform: scale3d(0.75, 1.25, 1);
-            transform: scale3d(0.75, 1.25, 1);
+    transform: scale3d(0.75, 1.25, 1);
   }
   40% {
     -webkit-transform: scale3d(1.25, 0.75, 1);
-            transform: scale3d(1.25, 0.75, 1);
+    transform: scale3d(1.25, 0.75, 1);
   }
   50% {
     -webkit-transform: scale3d(0.85, 1.15, 1);
-            transform: scale3d(0.85, 1.15, 1);
+    transform: scale3d(0.85, 1.15, 1);
   }
   65% {
     -webkit-transform: scale3d(1.05, 0.95, 1);
-            transform: scale3d(1.05, 0.95, 1);
+    transform: scale3d(1.05, 0.95, 1);
   }
   75% {
     -webkit-transform: scale3d(0.95, 1.05, 1);
-            transform: scale3d(0.95, 1.05, 1);
+    transform: scale3d(0.95, 1.05, 1);
   }
   100% {
     -webkit-transform: scale3d(1, 1, 1);
-            transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
   }
 }
 @keyframes jello-vertical {
   0% {
     -webkit-transform: scale3d(1, 1, 1);
-            transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
   }
   30% {
     -webkit-transform: scale3d(0.75, 1.25, 1);
-            transform: scale3d(0.75, 1.25, 1);
+    transform: scale3d(0.75, 1.25, 1);
   }
   40% {
     -webkit-transform: scale3d(1.25, 0.75, 1);
-            transform: scale3d(1.25, 0.75, 1);
+    transform: scale3d(1.25, 0.75, 1);
   }
   50% {
     -webkit-transform: scale3d(0.85, 1.15, 1);
-            transform: scale3d(0.85, 1.15, 1);
+    transform: scale3d(0.85, 1.15, 1);
   }
   65% {
     -webkit-transform: scale3d(1.05, 0.95, 1);
-            transform: scale3d(1.05, 0.95, 1);
+    transform: scale3d(1.05, 0.95, 1);
   }
   75% {
     -webkit-transform: scale3d(0.95, 1.05, 1);
-            transform: scale3d(0.95, 1.05, 1);
+    transform: scale3d(0.95, 1.05, 1);
   }
   100% {
     -webkit-transform: scale3d(1, 1, 1);
-            transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
   }
 }
